--- a/manager/src/main/res/layout/style_card.xml
+++ b/manager/src/main/res/layout/style_card.xml
@@ -2,18 +2,18 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/styleCard"
         android:layout_height="250dp"
         app:cardBackgroundColor="?attr/dividerColor"
-        app:cardCornerRadius="0dp"
+        android:layout_margin="@dimen/margin_small"
+        app:cardCornerRadius="@dimen/radius_default"
         app:cardElevation="0dp"
         app:strokeColor="?android:textColorPrimary"
         android:foreground="?attr/selectableItemBackground"
         android:stateListAnimator="@animator/list_animator"
         android:layout_width="match_parent"
-        app:strokeWidth="1dp">
+        app:strokeWidth="2dp">
 
         <ImageView
             android:id="@+id/styleImage"
@@ -22,15 +22,17 @@
             android:layout_height="match_parent" />
 
         <TextView
-            android:padding="@dimen/padding_default"
             android:id="@+id/styleText"
             android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="@dimen/padding_default"
+            android:textColor="?android:textColorPrimary"
             android:textAlignment="center"
             android:transitionName="@string/style_text_transtition"
             android:text="Motiv"
-            android:textSize="@dimen/default_quote_size"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:textSize="@dimen/default_quote_size" />
     </com.google.android.material.card.MaterialCardView>
 
 </layout>
