--- a/app/src/main/res/drawable-xxxhdpi/bottom_line_2dp.xml
+++ b/app/src/main/res/drawable-xxxhdpi/bottom_line_2dp.xml
@@ -12,7 +12,7 @@
         android:right="-3dp"
         android:top="-3dp">
         <shape>
-            <solid android:color="@color/transparent" />
+            <solid android:color="?android:colorBackground" />
             <stroke
                 android:width="2dp"
                 android:color="?android:textColorPrimary" />
