--- a/app/src/main/res/layout/references_layout.xml
+++ b/app/src/main/res/layout/references_layout.xml
@@ -12,12 +12,14 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/reference_card"
-        android:layout_width="230dp"
+        android:layout_width="200dp"
         android:layout_height="250dp"
         android:layout_margin="10dp"
         android:stateListAnimator="@animator/list_animator"
         app:cardCornerRadius="@dimen/radius_default"
-        app:cardElevation="4dp">
+        app:cardElevation="0dp"
+        app:strokeColor="?android:textColorPrimary"
+        app:strokeWidth="2dp">
 
 
         <View
@@ -36,6 +38,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:textAlignment="center"
                 style="@style/TextAppearance.MaterialComponents.Headline4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
