--- a/app/src/main/res/layout/style_pager.xml
+++ b/app/src/main/res/layout/style_pager.xml
@@ -7,5 +7,6 @@
         android:id="@+id/stylesPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorAccent"
         tools:showIn="@layout/newquotepopup" />
 </layout>
