--- a/base/src/main/res/layout/list_dialog_item_layout.xml
+++ b/base/src/main/res/layout/list_dialog_item_layout.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bottom_line"
         android:foreground="?attr/selectableItemBackground"
-        android:padding="@dimen/padding_default"
+        android:paddingVertical="@dimen/padding_small"
         android:text="@{listItem.text}"
         tools:text="@string/app_name">
 
