--- a/base/src/main/res/layout/list_dialog_layout.xml
+++ b/base/src/main/res/layout/list_dialog_layout.xml
@@ -3,35 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.card.MaterialCardView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_default"
-        app:cardCornerRadius="@dimen/radius_default"
-        app:cardElevation="0dp">
+        android:layout_marginBottom="?attr/actionBarSize"
+        android:background="@drawable/round_stroke_filled"
+        android:orientation="vertical"
+        android:padding="@dimen/padding_small">
 
-        <LinearLayout
+
+        <include layout="@layout/motiv_dots" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/list_dialog_item_layout" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:background="@drawable/gradient_animation" />
+    </LinearLayout>
 
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/listRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/list_dialog_item_layout" />
-
-        </LinearLayout>
-
-
-    </com.google.android.material.card.MaterialCardView>
 
 
 </layout>
