--- a/base/src/main/res/layout/motiv_toolbar.xml
+++ b/base/src/main/res/layout/motiv_toolbar.xml
@@ -35,7 +35,7 @@
                 android:text="@string/app_name"
                 android:fontFamily="@font/jost"
                 android:textAppearance="@style/ToolbarTitle"
-                tools:textColor="@color/colorAccent"
+                tools:textColor="@color/md_black"
                 android:textColor="@color/white" />
         </RelativeLayout>
 
