--- a/base/src/main/res/layout/profile_quote_card.xml
+++ b/base/src/main/res/layout/profile_quote_card.xml
@@ -28,14 +28,13 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical"
-            android:padding="@dimen/default_padding">
+            android:padding="@dimen/padding_default">
 
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profilepic"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:contentDescription="Profile picture"
                 android:fitsSystemWindows="true"
@@ -44,7 +43,7 @@
                 android:tooltipText="Alterar foto de perfil"
                 android:transitionName="profilepic"
                 app:civ_border_color="?android:textColorPrimary"
-                app:civ_border_width="0dp"
+                app:civ_border_width="2dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
