--- a/base/src/main/res/layout/user_item.xml
+++ b/base/src/main/res/layout/user_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
 
@@ -16,6 +17,8 @@
             android:id="@+id/profilepic"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            app:civ_border_color="?android:textColorPrimary"
+            app:civ_border_width="2dp"
             tools:src="@drawable/ic_neptune" />
 
         <TextView
