--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="lblack">#1A000000</color>
     <color name="nblack">#B3000000</color>
     <color name="adminBorder">#6200EA</color>
+    <color name="light_blue_400">#FF29B6F6</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="gray_400">#FFBDBDBD</color>
+    <color name="gray_600">#FF757575</color>
 </resources>
