--- a/manager/src/main/res/drawable/round_circle.xml
+++ b/manager/src/main/res/drawable/round_circle.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
-
-    <corners android:radius="@dimen/radius_default" />
+    android:shape="oval">
 
 
     <!-- below code for different radius for each corner. -->
@@ -16,7 +14,6 @@
 
 
     <!-- Background color -->
-    <stroke android:width="2dp" android:color="?android:textColorPrimary"/>
-    <solid android:color="@color/transparent" />
+    <solid android:color="@color/white" />
 
 </shape>
