--- a/manager/src/main/res/layout/tab_font_view.xml
+++ b/manager/src/main/res/layout/tab_font_view.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fontText"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:stateListAnimator="@animator/selected_animator"
-    android:text="Mm"
-    android:textAlignment="center"
-    android:textSize="@dimen/default_quote_size"
-    android:textColor="@color/selected_font"
-    android:textStyle="bold" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+    </data>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/background"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="@dimen/margin_small"
+        android:stateListAnimator="@animator/list_animator"
+        app:cardCornerRadius="@dimen/radius_default"
+        app:cardElevation="0dp"
+        app:strokeColor="?android:textColorPrimary"
+        app:strokeWidth="2dp">
+
+        <TextView
+            android:id="@+id/fontText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="@dimen/padding_small"
+            android:text="Mm"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:textColor="@color/selected_font"
+            android:textStyle="bold" />
+    </com.google.android.material.card.MaterialCardView>
+
+</layout>
